--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,60 @@
+*{
+    box-sizing: border-box;
+}
+body{
+    background-image: linear-gradient(142deg,#b29bc3,#5cc0de);
+    font-family: "Lato",sans-serif;
+    height: 100mvh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.container{
+    background-color: rgb(255, 253, 253);
+    border-radius: 10px;
+    padding: 30px;
+    max-width: 1000px;
+    text-align: center;
+    border: 3px solid black;
+}
+.code.container{
+display: flex;
+align-items: center;
+justify-content: center;
+margin: 40px 0;
+}
+.code{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 1px solid rgb(255, 255, 255) ;
+    font-family: "Lato" sans-serif;
+    width: 75px;
+    height: 100px;
+    margin: 10px;
+    text-align: center;
+    font-weight: 300;
+    font-size: 60px;;
+}
+.info{
+    background-color: #cbcbcb;
+    color: rgb(121, 121, 128);
+    font-size: medium;
+  
+}
+@media(max-width:600px){
+    .code.container{
+        flex-wrap: wrap;
+    }
+    .code{
+        font-size: 24px;
+        height: 50px;
+        max-width: 50px;
+        font-size: bold;
+    }
+}
+.code::-webkit-outer-spin-button,
+.code::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
 
